2009-08-25  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #521951
	* DataViewManager.cs (CollectionToListChangeEventArgs) : Use a corresponding 
	DataTable/DataRelation obj instead of only DataRelation.
	
2009-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	* CustomDataClassGenerator.cs (MakeSafeName): Throw NRE instead of 
	ArgumentNullException - fixes failing tests.
	
2009-07-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* XmlSchemaDataImporter.cs (HandleDataSourceAnnotation): Don't rely 
	on the order of elements.
	
2009-07-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* XmlSchemaDataImporter.cs: String.IsNullOrEmpty changes
	
2009-07-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* XmlSchemaDataImporter.cs: Added null checks.
	
2009-07-22  Veerapuram Varadhan  <vvaradhan@novell.com>

	* XmlSchemaDataImporter.cs:
	CustomDataClassGenerator.cs: Silence off CWLs.
	
2009-07-22  Veerapuram Varadhan  <vvaradhan@novell.com>
	
	* CustomDataClassGenerator.cs (CreateCommandCollectionInitializeMethod):
	Fix generation of DbCommand[] instead of DbCommand()[].  Fix IndexRef to 
	ref proper index.
	Avoid using SourceColumnNullMapping property in the constructor 
	of DbParameter while creating the code.
	
2009-07-18  Veerapuram Varadhan  <vvaradhan@novell.com>

	* CustomDataClassGenerator.cs (CreateDbSourceMethods): Handle cases of Scalar 
	and NoData QueryTypes.
	
2009-07-17  Veerapuram Varadhan  <vvaradhan@novell.com>
	
	* TableAdapterSchemaInfo.cs: Wrap DbCommand within DbCommandInfo and 
	define MethodInfo to hold method properties common to both Get and Fill.
	
	* CustomDataClassGenerator.cs (CreateDbSourceMethods): Handle cases of Fill 
	and Get appropriately.
	
2009-07-16  Veerapuram Varadhan  <vvaradhan@novell.com>

	* CustomDataClassGenerator.cs (CreateDbSourceMethods):  Handle 
	methods of type "Fill".
	
	* XmlSchemaDataImporter.cs (ProcessDbParameters): Handle empty strings 
	while setting parameter properties.
	